# FairMOP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: analyze_results.py  custom_model_example.py  gpt_image_example.py  quickstart.py
examples/fairmop_output_example/DeCoDi_evaluation/: nurse_decodi_pareto_test_results.json
examples/fairmop_output_example/Fair Diffusion_evaluation/: nurse_fairdiffusion_pareto_test_results.json
examples/fairmop_output_example/Flux_default_evaluation/: nurse_fluxdev_default_pareto_test_results.json
examples/fairmop_output_example/Flux_evaluation/: nurse_fludev_config_pareto_test_results.json
examples/fairmop_output_example/SDXL_evaluation/: nurse_sdxl_pareto_test_results.json
examples/fairmop_output_example/SD_evaluation/: nurse_sd_pareto_test_results.json
experiments/: custom_model.yaml  full_benchmark.yaml  quickstart.yaml  test_gpt_image_1.yaml
fairmop/: __init__.py  __main__.py  config.py  input_specs.py  pipeline.py  utils.py
fairmop/dashboard/: app.py
fairmop/evaluation/: __init__.py  fairness.py  utility.py  vlm_judge.py
fairmop/generation/: __init__.py  base.py  custom.py  gpt_image.py  registry.py
fairmop/output/: __init__.py  export.py  pareto.py
